terraform/EC2-Server/sg.tf
resource "aws_security_group" "minecraft_security_group" {
  name        = "Minecraft_security_group"
  description = "Managed by Terraform"

  # SSH PORT
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # GRAFANA DASHBOARD PORT
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # PROMETHEUS PORT
  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # PROMETHEUS NODE EXPORTER
  ingress {
    from_port   = 9100
    to_port     = 9100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # PROMETHEUS MINECRAFT EXPORTER
  ingress {
    from_port   = 9150
    to_port     = 9150
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # GAME SERVER PORT
  ingress {
    from_port   = 25565
    to_port     = 25565
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # GAME SERVER RCON PORT
  ingress {
    from_port   = 25575
    to_port     = 25575
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
